# web-design-tokens

./: .gitattributes  .gitignore  LICENSE  README.md  pyiris.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: colors.py  extractors.py  logger.py  w3c_exporter.py
iris/: __init__.py  __main__.py  cli.py
iris/core/: display.py  extractors.py
iris/scripts/: detectFrameworks.js  extractShadows.js
output/example.com/: 2026-02-24T22-53-25.json
scripts/: detectIconSystem.js  extractBorderRadius.js  extractBorders.js  extractBreakpoints.js  extractButtonStyles.js  extractColors.js  extractInputStyles.js  extractLogo.js
tests/: test_colors.py
web_design_tokens/: __init__.py  __main__.py  cli.py
web_design_tokens/core/: __init__.py  colors.py  display.py  extractors.py  logger.py  w3c_exporter.py
web_design_tokens/scripts/: extractBadgeStyles.js  extractLinkStyles.js  extractSpacing.js  extractTypography.js
