[build-system]
requires = ["setuptools>=68,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "web-design-tokens"
version = "0.1.1"
description = "Extract any website's full design system — logos, colors, fonts, spacing, and more — into ready-to-use CSS tokens in seconds."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nguyễn Công Thuận Huy", email = "phucnop37@gmail.com"}
]
keywords = [
    "design-tokens", "design-system", "css-extractor",
    "brand-extraction", "web-scraping", "design-tools",
    "frontend", "w3c-dtcg", "color-extraction"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "playwright>=1.40.0",
    "rich>=13.0.0",
]
requires-python = ">=3.11"

[project.scripts]
iris = "web_design_tokens.cli:entry_point"

[tool.setuptools.packages.find]
include = ["web_design_tokens", "web_design_tokens.*"]

[tool.setuptools.package-data]
web_design_tokens = ["scripts/*.js"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501", "E701", "E702", "E741", "W291", "W292", "W293", "UP017"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
